--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Frontend Mentor | Product preview card component</title>
 
   <style>
-    /* .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); } */
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
     :root {
       /* primary brand colors */
       --clr-primary: hsl(30, 38%, 92%);
